Bug #62479 Fix bug where spaces in passwords would fail

Change-Id: I53679937d69b0a8897961900ebf33d197b8ce018